--- a/tests/tests.html
+++ b/tests/tests.html
@@ -3,11 +3,15 @@
 <html>
   <head>
     <link rel="stylesheet" href="core/qunit.css" type="text/css"/>
-    <script type="text/javascript" src='../ext/ananke.min.js'></script>
+    <script type="text/javascript" src='../scripts/jquery-1.5.min.js'></script>
+    <script type="text/javascript" src='../scripts/ananke.core.js'></script>
+    <script type="text/javascript" src='../scripts/ananke.item.js'></script>
+    <script type="text/javascript" src='../scripts/ananke.repos.js'></script>
+    <script type="text/javascript" src='../scripts/timer.controller.js'></script>
     <script type="text/javascript" src="core/qunit.js"></script>
     <script type="text/javascript" src="TimerControllerTests.js"></script>
     <script type="text/javascript" src="ItemTests.js"></script>
-
+    <script type="text/javascript" src="HistoryTests.js"></script>
   </head>
   <body>
     <h1 id="qunit-header">Ananke Tests</h1>
