--- a/tests/tests.html
+++ b/tests/tests.html
@@ -4,6 +4,7 @@
   <head>
     <link rel="stylesheet" href="core/qunit.css" type="text/css"/>
     <script type="text/javascript" src='../scripts/jquery-1.5.min.js'></script>
+    <script type="text/javascript" src='../scripts/jquery.tmpl.min.js'></script>    
     <script type="text/javascript" src='../scripts/ananke.core.js'></script>
     <script type="text/javascript" src='../scripts/ananke.item.js'></script>
     <script type="text/javascript" src='../scripts/ananke.repos.js'></script>
@@ -12,6 +13,8 @@
     <script type="text/javascript" src="TimerControllerTests.js"></script>
     <script type="text/javascript" src="ItemTests.js"></script>
     <script type="text/javascript" src="HistoryTests.js"></script>
+    <script type="text/javascript" src="ItemsRepoTests.js"></script>
+
   </head>
   <body>
     <h1 id="qunit-header">Ananke Tests</h1>
@@ -19,5 +22,6 @@
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests">
     </ol>
+    <div id="qunit-fixture"></div>
   </body>
 </html>
