--- a/tests/tests.html
+++ b/tests/tests.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="core/qunit.js"></script>
     <script type="text/javascript" src="TimerControllerTests.js"></script>
     <script type="text/javascript" src="ItemTests.js"></script>
-    <script type="text/javascript" src="HistoryTests.js"></script>
+    <script type="text/javascript" src="HistoryRepoTests.js"></script>
     <script type="text/javascript" src="ItemsRepoTests.js"></script>
 
   </head>
